# QuantumTrader_ML

./: .copilot-instructions.md  .env.example  .gitignore  .phase_status  ANALISE_COMPATIBILIDADE_DADOS_HMARL.md  ANALISE_COMPATIBILIDADE_PROFITDLL.md  ANALISE_DADOS_BOOK_COLLECTOR.md  ANALISE_FINAL_CORRECOES.md  ANALISE_HMARL_MELHORIAS.md  ANALISE_MODELOS_ML_COMPLETA.md  ANALISE_SISTEMA_FEATURES.md  BOOK_DATA_FEATURES_ML.md  CALLBACK_ANALYSIS_REPORT.md  CLAUDE.md  COMANDOS_BOOK_COLLECTION.md  COMPARACAO_CSV_BOOK_COLLECTOR.md  CONSOLIDACAO_AUTOMATICA_QUANDO.md  CONSOLIDACAO_BOOK_DATA_RESUMO.md  CORREÇÕES_API_HISTÓRICA.md  DATABASE_COLLECTION_GUIDE.md  DEVELOPER_GUIDE.md  DEVELOPER_GUIDE_V3_REFACTORING.md  DEVELOPMENT_STATUS_20250803.md  DEVELOPMENT_STATUS_20250804.md  DIAGNOSTICO_FINAL.md  DOCS_INDEX.md  DUAL_TRAINING_HMARL_INTEGRATION.md  ESTRATEGIA_TREINAMENTO_DUAL.md  ETAPA_6_SISTEMA_TREINAMENTO_ML.md  FASE4_BACKTESTING_REPORT.md  FASE4_COMPLETION_REPORT.md  FASE4_END_TO_END_TEST_REPORT.md  FASE4_PAPER_TRADING_REPORT.md  FASE4_RISK_METRICS_REPORT.md  FASE4_STRESS_TEST_REPORT.md  FINAL_ANALYSIS_COMPLETE.md  FINAL_BOOK_COLLECTION_SUMMARY.md  FLUXO_DADOS_REAIS_ANALISE.md  GUIA_DESENVOLVEDOR.md  GUIA_DEV_PROD.md  (+309 more)
.github/: copilot-instructions.md
backup_limpeza_20250722_121044/: ATUALIZACOES_DOCS_2025-07-21.md  CORRECAO_GUI_FINAL.md  CORRECOES_APLICADAS_FINAL.md  DIAGNOSTICO_CORRECAO_20250722.md  LOG_ATUALIZACOES.md  MONITOR_GUI_README.md  MONITOR_GUI_STATUS_FINAL.md  RESUMO_DATAFRAME_PRINT.py  SISTEMA_TREINAMENTO_INTEGRADO.md  STATUS_FINAL_SISTEMA.md  SYSTEM_OVERVIEW.md  (+50 more)
(+342 files in other folders)
